feat: Definição de casos de uso e melhoria no contrato da API de simulação de empréstimos
